--- a/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
+++ b/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
@@ -99,10 +99,18 @@
     <ClInclude Include="utility.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="shaders.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\x64\Debug\Data\shaders.shader">
+    <None Include="..\x64\Debug\Data\particle.hlsl">
       <Filter>Resource Files</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\x64\Debug\Data\object.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
