--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@
 *.opendb
 *.ilk
 *.pdb
+*.tlog
+*.tlog
+*.tlog
+TA_ParticleEditor/TA_ParticleEditor/x64/Debug/TA_Parti.B12702AD.tlog/CL.write.1.tlog
