--- a/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
+++ b/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
@@ -120,5 +120,8 @@
     <None Include="..\x64\Debug\Data\particle_animated.hlsl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\x64\Debug\Data\particle_animated_faded.hlsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
