--- a/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
+++ b/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClCompile Include="WICTextureLoader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gizmo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="particleeditor.h">
@@ -109,6 +112,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DDSTextureLoader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="renderable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="gizmo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
