--- a/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj
+++ b/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj
@@ -297,6 +297,9 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\x64\Debug\Data\compiled_includes.hlsli">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </None>
     <None Include="..\x64\Debug\Data\particle.hlsl">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
