2 new shaders - separated out modular shaders

--- a/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
+++ b/TA_ParticleEditor/TA_ParticleEditor/TA_ParticleEditor.vcxproj.filters
@@ -134,5 +134,11 @@
     <None Include="..\x64\Debug\Data\gizmo.hlsl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\x64\Debug\Data\particle_noise.hlsl">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="..\x64\Debug\Data\particle_animated_noise.hlsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
